[metadata]
name = python-markdown-nofollow
version = 0.0.1
author = stdworkflow
author_email = gsyipingliu@gmail.com
description = a Python Markdown plugin used to add rel="external nofollow" and target="_blank" attribute to all <a> tags
long_description = file: README.md
long_description_content_type = text/markdown
url = https://stdworkflow.com
project_urls =
    Bug Tracker = https://github.com/stdworkflow/python_markdown_nofollow
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7